# backend

./: .gitignore  =0.100.0  ARCHITECTURE_PROPRE.md  PITCH_CHALLENGE_IA_2026.md  PITCH_DOCUMENT.md  README.md  agent.txt  app.json  architecture.md  audit.txt  audite.md  extract_pdf.py  fiche_recueil_text.txt  fusion.txt  init_db.py  package.json  prompt_mobile.md  read_db.py  requirements.txt  style-map.json  update_fusion.py
app/: _layout.tsx  agent-dashboard.tsx  agent-demande-detail.tsx  index.tsx  login.tsx  nouvelle-demande.tsx  resultat.tsx
backend/: .env.example  .gitignore  create.py  final.py  main.py  pyproject.toml  requirements.txt  test_connexion.py
backend/app/: limiter.py  main.py
backend/app/agents/: crew.py  tools.py
backend/app/agents/config/: agents.yaml  tasks.yaml
backend/app/api/: README.md  __init__.py  auth.py  demandes.py  routes.py  users.py
backend/app/auth/: dependencies.py  jwt.py  security.py
backend/app/database/: base.py  migrations.py  models.py  sessions.py
backend/app/knowledge/: procedures.json
backend/app/models/: schemas.py
backend/app/schemas/: demandes.py  init.py  password.py  user.py
backend/app/services/: auth_services.py  crew_services.py  demandes_services.py
backend/app/utils/: db_context.py  error_detection.py  llm_fallback.py
backend/tests/: conftest.py  test_auth.py  test_demandes.py
constants/: Colors.ts
mobile/: app.json  biome.json  jest-setup.js  jest.config.js  package-lock.json  package.json  style-map.json
store/: types.ts  useAppStore.ts
web/: index.html  package-lock.json  (+1 more)
(+62 files in other folders)
