[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bcrypt==4.0.1",
    "crewai>=1.14.7",
    "email-validator>=2.3.0",
    "fastapi>=0.137.2",
    "langchain-groq>=1.1.3",
    "litellm>=1.89.2",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
]

